--- a/scss/main.scss
+++ b/scss/main.scss
@@ -2,4 +2,8 @@
   width: 100%;
 }
 
+input[type="text"]:focus {
+  border-bottom-color: #3f51b5 !important;
+}
+
 @import "../node_modules/materialize-css/sass/materialize.scss";
