changed font family

--- a/scss/main.scss
+++ b/scss/main.scss
@@ -1,3 +1,11 @@
+@import url("https://fonts.googleapis.com/css2?family=Baloo+Bhai+2&display=swap");
+
+body,
+.btn,
+input {
+  font-family: "Baloo Bhai 2", cursive !important;
+}
+
 .btn-block {
   width: 100%;
 }
