--- a/scss/main.scss
+++ b/scss/main.scss
@@ -14,4 +14,8 @@ input:focus {
   border-bottom-color: #3f51b5 !important;
 }
 
+.row {
+  width: 100% !important;
+}
+
 @import "../node_modules/materialize-css/sass/materialize.scss";
