--- a/scss/main.scss
+++ b/scss/main.scss
@@ -1,4 +1,4 @@
-@import url("https://fonts.googleapis.com/css2?family=Baloo+Bhai+2&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Baloo+Bhai+2:wght@400;700&display=swap");
 
 body,
 .btn,
@@ -31,11 +31,11 @@ input:focus {
   padding-bottom: 6px !important;
 }
 
-.add-exercise {
-  margin-bottom: 0 !important;
-}
-
 h1 {
   margin-top: 2rem !important;
+}
+
+strong {
+  font-weight: bold !important;
 }
 @import "../node_modules/materialize-css/sass/materialize.scss";
